# vaultDrive_client

./: .gitignore  Cargo.toml  README.md  build.rs
proto/: hub.proto  vaultdrive.proto
src/: auth.rs  autoRun.rs  client.rs  commands.rs  deamonize.rs  driveManagerUI.rs  main.rs  network.rs  shared.rs
src/filesystem/: fuse.rs  mod.rs  winfsp.rs
src/proto/: hub.rs  vaultdrive.rs
ui/: app.slint
