[package]
name = "vaultDrive-client"
version = "1.0.0"
edition = "2024"
authors = ["Anthony Jakson"]
description = "Secure remote file access client over QUIC"
license = "AGPL-3"

[[bin]]
name = "vaultdrive-client"
path = "src/main.rs"

[dependencies]
# QUIC networking
quinn = { version = "0.11.9", default-features = false, features = ["rustls-aws-lc-rs", "runtime-tokio", "futures-io"] }
rustls = { version = "0.23.34", default-features = false, features = ["aws-lc-rs"] }

# Protocol buffers
prost = { version = "0.14.1" }
bytes = { version = "1.5" , features = ["std"]}
bytes-varint = "1.1.0"
bytes-utils = "0.1.4"


interprocess = { version = "2.4.0", features = ["tokio"] }
postcard = {version = "1.1.3", features = ["alloc"]}
path-slash = "0.2.1"


# Async runtime
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }



# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Caching and utilities

parking_lot = "0.12.5"
dashmap = "7.0.0-rc2"
x509-parser = "0.18.0"
rcgen = { version = "0.14.5", default-features = false, features = ["aws_lc_rs"] }
once_cell = "1.21.3"
log = "0.4.28"
webpki-roots = "1.0.6"
futures = "0.3.31"
strum_macros = "0.27.2"
strum = "0.27.2"
serde = { version = "1.0.228", features = ["derive"] }
service-manager = "0.10.0"
uuid = { version = "1.21.0", features = ["v4"] }
rand_core = { version = "0.6.4" ,features = ["getrandom"]}
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["aws-lc-rs"] }
unsigned-varint = { version = "0.8.0", features = ["futures-io", "tokio-util", "futures"] }


rusqlite = "0.32"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "derive"] }
local-ip-address = "0.6.10"
snow = "0.10.0"
zstd = "0.13.3"
tracing-appender = "0.2.4"
slint = "1.15.1"
# Platform-specific filesystem
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_Services",
    "Win32_Security",
    "Win32_Security_Authorization"
] }
windows-sys = "0.61.2"
is_elevated = "0.1.2"
windows-service = "0.8.0"

winfsp = { version = "0.12.4+winfsp-2.1", features = ["full", "windows-62", "system"]}
winfsp-sys = "0.12.1+winfsp-2.1"
winreg = "0.55.0"


[target.'cfg(unix)'.dependencies]
fuser = "0.17.0"
libc = "0.2.177"
nix = { version = "0.31.2", features = ["user"] }

[build-dependencies]
prost-build = "0.14.1"
slint-build = "1.15.1"

[target.'cfg(target_os = "windows")'.build-dependencies]
winfsp = "0.12.4"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

